last day - tests

--- a/src/app/user-management/user-display-card/user-display-card.component.html
+++ b/src/app/user-management/user-display-card/user-display-card.component.html
@@ -15,7 +15,7 @@
             [(ngModel)]="user.userEmail">
         </div>
         <div *ngIf="!editState">
-          <h5>{{user.userEmail}}</h5>
+          <h5>{{user.userEmail | uppercase}}</h5>
         </div>
         <div class="description">{{user.userDescription}}</div>
       </div>
