--- a/src/app/common/home/home.component.html
+++ b/src/app/common/home/home.component.html
@@ -7,3 +7,48 @@
   <button class="btn btn-primary" routerLink="/user-administration" routerLinkActive="card-hover ">Navigate to User Administration</button>
   <button class="btn btn-primary" (click)="setActive()" routerLinkActive="card-hover ">Set TRUE</button>
 </div>
+
+
+<div fxLayout="column" fxLayoutGap="40px">
+  <h3>Pipes</h3>
+
+  <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
+    <div fxLayout="column" fxLayoutAlign="center center" class="card" style="padding: 20px;">
+      <h3>No pipe</h3>
+      <div *ngFor="let item of listOfString">
+        {{item}}
+      </div>
+    </div>
+    <div fxLayout="column" fxLayoutAlign="center center" class="card" style="padding: 20px;">
+      <h3>Upper case pipe</h3>
+      <div *ngFor="let item of listOfString">
+        {{item | uppercase}}
+      </div>
+    </div>
+    <div fxLayout="column" fxLayoutAlign="center center" class="card" style="padding: 20px;">
+      <h3>Slice pipe </h3>
+      <div *ngFor="let item of listOfString">
+        {{item | slice:0:5 }}
+      </div>
+    </div>
+
+  </div>
+
+  <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
+    <div fxLayout="column" fxLayoutAlign="center center" class="card" style="padding: 20px;">
+      <h3>Custom pipe</h3>
+      <div *ngFor="let item of listOfString">
+        {{item | customShorten }}
+      </div>
+    </div>
+
+    <div fxLayout="column" fxLayoutAlign="center center" class="card" style="padding: 20px;">
+      <h3>Custom pipe : Parameter</h3>
+      <div *ngFor="let item of listOfString">
+        {{item | customShorten : 3 }}
+      </div>
+    </div>
+  </div>
+
+
+</div>
